# cryptoflow

./: .env.example  .gitignore  README.md  docker-compose.yaml
backend/: .gitignore  Dockerfile  pom.xml
backend/src/main/java/ro/mihaisturza/cryptoflow/: CryptoflowApplication.java
backend/src/main/java/ro/mihaisturza/cryptoflow/amqp/: MessagePublisherService.java  RabbitMQConfig.java
backend/src/main/java/ro/mihaisturza/cryptoflow/consumer/: ImageMessageConsumer.java  ProcessedImage.java  ProcessedImageRepository.java
backend/src/main/java/ro/mihaisturza/cryptoflow/crypto/: CryptoService.java
backend/src/main/java/ro/mihaisturza/cryptoflow/exception/: ErrorResponse.java  GlobalExceptionHandler.java
backend/src/main/java/ro/mihaisturza/cryptoflow/image/: EncryptionMode.java  ImageController.java  ImageService.java  (+4 more)
backend/src/main/java/ro/mihaisturza/exception/: ErrorResponse.java  GlobalExceptionHandler.java
backend/src/main/resources/: application-backend.yml  application-consumer.yml  application.properties  application.yml
backend/src/test/java/ro/mihaisturza/cryptoflow/: CryptoflowApplicationTests.java
crypto/: CMakeLists.txt  Dockerfile  README.md
crypto/src/: crypto_engine.cpp  crypto_engine.h  image_processor.cpp  image_processor.h  main.cpp
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/app/routes/: home.tsx
frontend/components/: file-dropzone.tsx
frontend/src/: app.tsx  main.tsx
frontend/src/components/: file-dropzone.tsx  processed-list.tsx
frontend/src/utils/: twx.ts
mysql/: my.cnf
(+2 files in other folders)
